Bug 160787 - Calc active cell cursor has small transparent corners
Summary: Calc active cell cursor has small transparent corners
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Cell-Selection
  Show dependency treegraph
 
Reported: 2024-04-23 00:31 UTC by stragu
Modified: 2024-05-21 11:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of issue (903 bytes, image/png)
2024-04-23 00:31 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2024-04-23 00:31:56 UTC
Created attachment 193813 [details]
screenshot of issue

In Calc, the active cell cursor has a small transparent squares at 3 corners.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 695e8742da850bbb15c2e6d2b5d4c99a0daf4925
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded

Also with gen and kf5 VCL plugins.

Bibisected with linux-64-24.8 repository to first bad build [61d791fb0497b03cde18ff4579f798d55e58189b] which is:

commit 7b1405689d4246e0e37e8759f03e1962af964cec
author	Noel Grandin 	Fri Apr 19 22:56:04 2024 +0200
committer	Noel Grandin 	Sat Apr 20 07:42:08 2024 +0200
reduce the number of drawing primitives we create in OverlaySelection
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166321

Noel, can you please have a look?
Comment 1 m_a_riosv 2024-04-23 01:08:04 UTC
They don't exist with
Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
or
Version: 7.6.6.3 (X86_64) / LibreOffice Community
Build ID: d97b2716a9a4a2ce1391dee1765565ea469b0ae7
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 2 ady 2024-04-23 04:44:20 UTC
(In reply to Stéphane Guillou (stragu) from comment #0)
> In Calc, the active cell cursor has a small transparent squares at 3 corners.

FWIW, I can see the same on MS Windows with LO 24.8 alpha daily built 2024-04-23, but I wonder... So what? Is there any negative consequence of having these 3 transparent corners?
Comment 3 stragu 2024-04-23 06:53:50 UTC
(In reply to ady from comment #2)
> So what? Is there any negative consequence of
> having these 3 transparent corners?
Sure, severity is pretty minor (changed it now), but it is a noticeable change that will seem buggy and unpolished to more users than just me, I am sure.
Comment 4 Commit Notification 2024-04-23 16:51:25 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1f86fdd4b5428a8c7b253051cca93429dc71f894

tdf#160787 Calc active cell cursor has small transparent corners

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 ady 2024-05-12 10:06:20 UTC
Considering that this tdf#160787 is a minor issue whereas one negative consequence of the patch in comment 4 is tdf#160946 (which is a much more important issue in terms of UX), I would like to kindly ask to attempt to find a solution to tdf#160946, or to revert the patch linked-to in comment 4 and find some alternative solution. TIA.