tdf#160787 Calc active cell cursor has small transparent corners

clearly I don't understand something about B2DPolyPolygon, revert part
of

    commit 7b1405689d4246e0e37e8759f03e1962af964cec
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Fri Apr 19 22:56:04 2024 +0200
reduce the number of drawing primitives we create in
OverlaySelection

Change-Id: If8f07d021543e2686a3acfc6a0d38b2ebc962de4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166543
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>